WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117890
[MediaStream]: Remove ``>= 0'' assertion from a size_t variable
https://bugs.webkit.org/show_bug.cgi?id=117890
Summary
[MediaStream]: Remove ``>= 0'' assertion from a size_t variable
Sergio Correia (qrwteyrutiyoup)
Reported
2013-06-21 13:26:22 PDT
[MediaStream]: Remove ``>= 0'' assertion from a size_t variable
Attachments
Patch
(1.77 KB, patch)
2013-06-21 13:30 PDT
,
Sergio Correia (qrwteyrutiyoup)
no flags
Details
Formatted Diff
Diff
Patch
(1.66 KB, patch)
2013-06-21 14:27 PDT
,
Sergio Correia (qrwteyrutiyoup)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Correia (qrwteyrutiyoup)
Comment 1
2013-06-21 13:30:13 PDT
Created
attachment 205211
[details]
Patch
Anders Carlsson
Comment 2
2013-06-21 14:06:02 PDT
Comment on
attachment 205211
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=205211&action=review
> Source/WebCore/Modules/mediastream/RTCStatsResponse.cpp:58 > + // size_t is an unsigned type, so report is always >= 0.
I don’t think a comment is needed here.
Sergio Correia (qrwteyrutiyoup)
Comment 3
2013-06-21 14:27:52 PDT
Created
attachment 205217
[details]
Patch Removed comment.
WebKit Commit Bot
Comment 4
2013-06-21 15:50:27 PDT
Comment on
attachment 205217
[details]
Patch Clearing flags on attachment: 205217 Committed
r151863
: <
http://trac.webkit.org/changeset/151863
>
WebKit Commit Bot
Comment 5
2013-06-21 15:50:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug