[MediaStream]: Remove ``>= 0'' assertion from a size_t variable https://bugs.webkit.org/show_bug.cgi?id=117890

Patch by Sergio Correia <sergio.correia@openbossa.org> on 2013-06-21
Reviewed by Adam Barth.

This patch fixes a strict build by removing the ``>= 0'' assertion from
a size_t (unsigned type) variable in RTCStatsResponse.cpp.

No new tests; build fix.

* Modules/mediastream/RTCStatsResponse.cpp:
(WebCore::RTCStatsResponse::addStatistic): Remove ``>=0''assertion,
since the variable is unsigned and is always >= 0.

Canonical link: https://commits.webkit.org/136031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151863 268f45cc-cd09-0410-ab3c-d52691b4dbfc